# Parallel-and-concurrent-lab-1

./: CMakeLists.txt  Dockerfile  Lab  README.md  build_and_run.ps1  build_and_run.sh  linkedList.c  linkedList.h  main.c  makefile  plot.py
output/: .~lock.Case_2_Result.csv#  .~lock.Case_3_Result.csv#  Case_1.csv  Case_1_Result.csv  Case_2.csv  Case_2_Result.csv  Case_3.csv  Case_3_Result.csv
tests/: Config.c  Config.h  Constants.h  Mutex.c  Mutex.h  ReadWriteLock.c  ReadWriteLock.h  Serial.c  Serial.h
tests/unit/: linkedListUnit.c
